# wordpress-builder

./: .gitignore  CLAUDE_HANDOFF.md  README.md  SKILL.md  bugs.md  builder.py  disable-ssl.cnf  docker-compose.yml  init.sql  migrate_armand_gilbert.py  premium-mockup-styles.php  pyproject.toml  test_blueprint.json  wp-config.php
.agents/skills/wordpress-builder/: SKILL.md
.agents/skills/wordpress-design-templates/: SKILL.md
capture/: bundle.py  capture.py  discovery.py  installer.py  media.py  models.py  renderer.py  verify.py
capture/content/: blocks.py  extractor.py  fingerprint.py
capture/design/: llm.py  theme_writer.py  tokens.py
characterize/: characterizer.py  components.py  layout.py  loader.py  models.py  plugins.py  theme.py  writer.py
custom-plugins/: custom-estimator-armand-gilbert-web-design.php
custom-theme/premium-fse-theme/: style.css  theme.json
custom-theme/premium-fse-theme/parts/: footer.html  header.html
custom-theme/premium-fse-theme/patterns/: about-media.php  contact-details.php  hero-split.php  (+2 more)
tests/capture/: test_blocks.py  test_bundle.py  test_capture.py  test_discovery.py  test_extractor.py  test_fingerprint.py  test_installer.py  test_integration_armand.py  test_llm.py  test_media.py  test_models.py  test_renderer.py  test_theme_writer.py  test_tokens.py  test_verify.py
tests/characterize/: test_characterizer.py  test_components.py  test_extract_blocks.py  test_integration_characterize.py  test_integration_crawl_quality.py  test_layout.py  test_models.py  test_plugins.py  test_roundtrip.py  test_theme.py  test_writer.py
(+15 files in other folders)
